# quantum-circuit-synthesis

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_linux.sh  build_windows.bat
.github/workflows/: workflow.yml  workflow_linux.yml  workflow_windows.yml
demo/: main.cpp
include/: computings.hpp  exseptions.hpp  gates.hpp  logger.hpp  math.hpp  primitives.hpp  statistics.hpp  strings.hpp  synthesis.hpp
scripts/: statistics.py  statistics_with_data.py  statistics_with_generator.py  sub_generator.py
sources/: gates.cpp  primitives.cpp  synthesis.cpp
tests/: test_boolean_functions.cpp  test_circuits.cpp  test_gates.cpp  test_mappings.cpp  test_math.cpp  test_primitives.cpp  test_reduction.cpp  test_strings.cpp  test_substitutions.cpp  test_synthesis.cpp  test_synthesis_CA.cpp  test_synthesis_GS.cpp  test_synthesis_NSS.cpp  test_synthesis_RW.cpp  test_synthesis_SS.cpp  test_synthesis_ZKB.cpp  test_synthesis_dummy.cpp  test_synthesis_general.cpp
tests/assets/: circuit.txt  map.txt  qc.txt  qc1.txt  qc_mem.txt  sub.txt
tests/benchmarks/: 3_17.txt  4b15g_4.txt  5mod5.txt  6sym.txt  README.md  nth_prime10_inc.txt  nth_prime11_inc.txt  nth_prime8_inc.txt  nth_prime9_inc.txt  test1.txt  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt  test7.txt
